1999-03-18  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/SimpleTestHarness.java (main): Examine all
	arguments.

1999-03-16  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/Boolean/BooleanTest.java (test_equals):
	Fixed incorrect test.

	* Makefile.in: Rebuilt.
	* Makefile.am (harness_files): Added config.java.

	* gnu/testlet/java/lang/Boolean/BooleanTest.java (test): Renamed
	argument.

1999-03-16  Anthony Green  <green@cygnus.com>

	* configure.in: Add --with-tmpdir option
	* configure: Rebuilt.
	
	* Makefile.am: Don't pass the source directory to SimpleTestHarness.
	* Makefile.in: Rebuilt.

	* gnu/testlet/TestHarness.java: Add getTempDirectory.
	* gnu/testlet/SimpleTestHarness.java: Use config interface
	to get srcdir and tmpdir. Add getTempDirectory.

1999-03-14  Anthony Green  <green@cygnus.com>

	* gnu/testlet/java/lang/Boolean/BooleanTest.java: Use TestHarness.

1999-03-14  Anthony Green  <green@cygnus.com>

	* gnu/testlet/java/lang/Boolean/BooleanTest.java,
	gnu/testlet/java/lang/Byte/ByteTest.java,
	gnu/testlet/java/lang/Character/CharacterTest.java,
	gnu/testlet/java/lang/Class/ClassTest.java,
	gnu/testlet/java/lang/Cloneable/CloneableTest.java,
	gnu/testlet/java/lang/Double/DoubleTest.java,
	gnu/testlet/java/lang/Float/FloatTest.java,
	gnu/testlet/java/lang/Integer/IntegerTest.java,
	gnu/testlet/java/lang/Long/LongTest.java,
	gnu/testlet/java/lang/Math/MathTest.java,
	gnu/testlet/java/lang/Number/NewNumber.java,
	gnu/testlet/java/lang/Number/NumberTest.java,
	gnu/testlet/java/lang/Object/ObjectTest.java,
	gnu/testlet/java/lang/Short/ShortTest.java,
	gnu/testlet/java/lang/String/StringTest.java,
	gnu/testlet/java/lang/StringBuffer/StringBufferTest.java: New files.

1999-03-12  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/text/MessageFormat/parse.java: New file.

1999-03-11  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/text/DecimalFormat/parse.java (test): Correctly
	use trailing `-' in edge case.  Sigh.
